--- a/index.html
+++ b/index.html
@@ -3,41 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">  
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="starter-code/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&display=swap" rel="stylesheet">    
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
   <title>Frontend Mentor | Suite landing page</title>
 </head>
 <body>
+ <main>
+   <header class="header">
+     <img src="starter-code\assets\logo.svg" alt="logo">
+     <div  class="header-button">
+      <a href="">Request Beta Access</a>
+     </div>
+     
+   </header>
+   <section class="central">
+     <div class="central-left">
+       <h1>A <span>super solution</span> for your <span>business.</span> </h1>
+       <p class="central-left-p">Our marketing and sales automations help you scale your outreach to get more leads for your company. </p>
+       <div class="central-left-button" >
+        <a href="">Request Beta Access</a>
+       </div>       
+     </div>
+     <img src="starter-code/assets/image-hero-portrait@2x.png" alt="">
+     <div class="central-right">
+      
+     </div>
 
-  Request Beta Access
+   </section>
+   <footer>
 
-  A super solution for your business.
 
-  Our marketing and sales automations help you scale your outreach to 
-  get more leads for your company. 
-
-  Request Beta Access
-
-  2K+
-  Companies
-
-  8
-  Languages
-
-  1.2M
-  Leads
-
-  It just works.
-
-  “I really like how it is an all-in-one solution that handle many of 
-  the tasks that you would normally need separate tools to do the same 
-  job. This thing is a miracle worker.”
-
-  Jeremy Robinson
-  CMO, Fylo
-
-  Copyright - Suite
-
+   </footer>
+ </main>
 </body>
 </html>
