--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    </header>
    <section class="central">
      <div class="central-left">
-       <h1>A <span>super solution</span> for your <span>business.</span> </h1>
+       <h1 class="central-left-h1">A <span>super solution</span> for your <span>business.</span> </h1>
        <p class="central-left-p">Our marketing and sales automations help you scale your outreach to get more leads for your company. </p>
        <div class="central-left-button" >
         <a href="">Request Beta Access</a>
@@ -31,13 +31,49 @@
      </div>
      <img src="starter-code/assets/image-hero-portrait@2x.png" alt="">
      <div class="central-right">
+       <div>
+         <h2>2K+</h2>
+         <p>COMPANIES</p>
+       </div>
+       <div>
+        <h2>8</h2>
+        <p>CLANGUAGES</p>
+      </div>
+      <div>
+        <h2>1.2M</h2>
+        <p>LEADS</p>
+      </div>
       
      </div>
 
    </section>
-   <footer>
-
-
+   <footer class="footer">
+     <div class="footer-inside">
+       <div class="footer-card">
+         <div class="footer-card-content">
+           <img src="starter-code/assets/image-jeremy-large.png" alt="">
+           <div class="footer-card-content-rside">
+             <h2>It just <span>works</span></h2>
+             <blockquote>
+              “I really like how it is an all-in-one solution that 
+              handle many of the tasks that you would normally need 
+              separate tools to do the same job. This thing is a miracle worker.”
+             </blockquote>
+             <h3>JEREMY ROBINSON</h3>
+             <p>CMO. FYLO</p>
+           </div>
+         </div>
+       </div>
+       <div class="footer-bar">
+         <img src="starter-code\assets\logo.svg" alt="logo">
+         <p class="rights">Copyright-suite</p>
+         <div class="icons">
+           <a href=""><img src="starter-code/assets/icon-facebook.svg" alt="fb"></a>
+           <a href=""><img src="starter-code/assets/icon-twitter.svg" alt="fb"></a>
+           <a href=""><img src="starter-code/assets/icon-instagram.svg" alt="fb"></a>
+         </div>
+       </div>
+     </div>
    </footer>
  </main>
 </body>
