--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        </div>
        <div>
         <h2>8</h2>
-        <p>CLANGUAGES</p>
+        <p>LANGUAGES</p>
       </div>
       <div>
         <h2>1.2M</h2>
