--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
        </div>       
      </div>
      <img src="starter-code/assets/image-hero-portrait@2x.png" alt="">
+     <img src="starter-code/assets/image-hero-landscape@2x.png" alt="">
      <div class="central-right">
        <div>
          <h2>2K+</h2>
